samples/_failures_safe/1761156160_98833b_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_737c660f.c: In function ‘main’:
./samples/SAFE/__tmp_737c660f.c:141:41: error: expected ‘)’ at end of input
  141 |         } else if (multiply_result == -1
      |                   ~                     ^
      |                                         )
./samples/SAFE/__tmp_737c660f.c:141:9: error: expected declaration or statement at end of input
  141 |         } else if (multiply_result == -1
      |         ^
./samples/SAFE/__tmp_737c660f.c:141:9: error: expected declaration or statement at end of input
